# ASR

./: .gitignore  README.md  README_EN.md  asr_transcriber.py  claude_desktop_config.json  main.py  mcp_server.py  pyproject.toml  requirements.txt  requirements_mcp.txt  video_downloader.py  video_processor.py
